welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Boolean)
	if (Math.abs(a-b)>=10 || Math.abs(b-c)>=10 || Math.abs(c-a>=10))
                                                           ^